--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     
     <!--====== Title ======-->
-    <title>Spectropharma - A leading national and global pharmaceutical company</title>
+    <title>Spectropharma - A leading national and global pharmaceutical company. Kingdom of Saudi Arabia</title>
     
     <meta name="description" content="Spectropharma core business includes development, manufacturing and sales of pharmaceutical products in Saudi Arabia and abroad.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
